src/tests/fixtures/field_definitions/ParameterPropertyFieldBindingPattern.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
export default class SomeType {
  constructor(
    /** @gqlField */
    public [foo]: string,
  ) {}
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/field_definitions/ParameterPropertyFieldBindingPattern.invalid.ts:5:12 - error: Expected an identifier.

5     public [foo]: string,
             ~~~~~
